libs/PCParser.py
# Generated from /antlr/PC.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PCParser ( Parser ):

    grammarFileName = "PC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'dsl'", "'component'", "'layer'", "'root'", 
                     "'type'", "'props'", "'parent'", "'children'", "'prop'", 
                     "'null'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "'['", "']'", "'('", "')'", 
                     "'='", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "DSL", "COMPONENT", "LAYER", "ROOT", 
                      "TYPE", "PROPS", "PARENT", "CHILDREN", "PROP", "NULL", 
                      "BOOLEAN", "STRING", "NUMBER", "WHITESPACE", "IDENTIFIER", 
                      "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "OPEN_PARANTHESIS", "CLOSE_PARANTHESIS", "EQUALS", 
                      "COMMA", "SEMICOLON" ]

    RULE_dsl = 0
    RULE_component = 1
    RULE_layer = 2
    RULE_type = 3
    RULE_props = 4
    RULE_parentLayer = 5
    RULE_childLayers = 6
    RULE_object = 7
    RULE_array = 8
    RULE_pair = 9
    RULE_value = 10
    RULE_propReference = 11

    ruleNames =  [ "dsl", "component", "layer", "type", "props", "parentLayer", 
                   "childLayers", "object", "array", "pair", "value", "propReference" ]

    EOF = Token.EOF
    DSL=1
    COMPONENT=2
    LAYER=3
    ROOT=4
    TYPE=5
    PROPS=6
    PARENT=7
    CHILDREN=8
    PROP=9
    NULL=10
    BOOLEAN=11
    STRING=12
    NUMBER=13
    WHITESPACE=14
    IDENTIFIER=15
    OPEN_BRACE=16
    CLOSE_BRACE=17
    OPEN_BRACKET=18
    CLOSE_BRACKET=19
    OPEN_PARANTHESIS=20
    CLOSE_PARANTHESIS=21
    EQUALS=22
    COMMA=23
    SEMICOLON=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DslContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DSL(self):
            return self.getToken(PCParser.DSL, 0)

        def OPEN_BRACE(self):
            return self.getToken(PCParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(PCParser.CLOSE_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCParser.ComponentContext)
            else:
                return self.getTypedRuleContext(PCParser.ComponentContext,i)


        def getRuleIndex(self):
            return PCParser.RULE_dsl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDsl" ):
                return visitor.visitDsl(self)
            else:
                return visitor.visitChildren(self)




    def dsl(self):

        localctx = PCParser.DslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dsl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(PCParser.DSL)
            self.state = 25
            self.match(PCParser.OPEN_BRACE)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.component()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 31
            self.match(PCParser.CLOSE_BRACE)
            self.state = 32
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENT(self):
            return self.getToken(PCParser.COMPONENT, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.IDENTIFIER)
            else:
                return self.getToken(PCParser.IDENTIFIER, i)

        def OPEN_PARANTHESIS(self):
            return self.getToken(PCParser.OPEN_PARANTHESIS, 0)

        def CLOSE_PARANTHESIS(self):
            return self.getToken(PCParser.CLOSE_PARANTHESIS, 0)

        def OPEN_BRACE(self):
            return self.getToken(PCParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(PCParser.CLOSE_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCParser.LayerContext)
            else:
                return self.getTypedRuleContext(PCParser.LayerContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.COMMA)
            else:
                return self.getToken(PCParser.COMMA, i)

        def getRuleIndex(self):
            return PCParser.RULE_component

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = PCParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(PCParser.COMPONENT)
            self.state = 35
            self.match(PCParser.IDENTIFIER)
            self.state = 36
            self.match(PCParser.OPEN_PARANTHESIS)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 37
                self.match(PCParser.IDENTIFIER)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==23:
                    self.state = 38
                    self.match(PCParser.COMMA)
                    self.state = 39
                    self.match(PCParser.IDENTIFIER)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 47
            self.match(PCParser.CLOSE_PARANTHESIS)
            self.state = 48
            self.match(PCParser.OPEN_BRACE)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.layer()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

            self.state = 54
            self.match(PCParser.CLOSE_BRACE)
            self.state = 55
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAYER(self):
            return self.getToken(PCParser.LAYER, 0)

        def IDENTIFIER(self):
            return self.getToken(PCParser.IDENTIFIER, 0)

        def OPEN_BRACE(self):
            return self.getToken(PCParser.OPEN_BRACE, 0)

        def type_(self):
            return self.getTypedRuleContext(PCParser.TypeContext,0)


        def props(self):
            return self.getTypedRuleContext(PCParser.PropsContext,0)


        def parentLayer(self):
            return self.getTypedRuleContext(PCParser.ParentLayerContext,0)


        def childLayers(self):
            return self.getTypedRuleContext(PCParser.ChildLayersContext,0)


        def CLOSE_BRACE(self):
            return self.getToken(PCParser.CLOSE_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def ROOT(self):
            return self.getToken(PCParser.ROOT, 0)

        def getRuleIndex(self):
            return PCParser.RULE_layer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = PCParser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_layer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(PCParser.LAYER)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 58
                self.match(PCParser.ROOT)


            self.state = 61
            self.match(PCParser.IDENTIFIER)
            self.state = 62
            self.match(PCParser.OPEN_BRACE)
            self.state = 63
            self.type_()
            self.state = 64
            self.props()
            self.state = 65
            self.parentLayer()
            self.state = 66
            self.childLayers()
            self.state = 67
            self.match(PCParser.CLOSE_BRACE)
            self.state = 68
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(PCParser.TYPE, 0)

        def STRING(self):
            return self.getToken(PCParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(PCParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PCParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(PCParser.TYPE)
            self.state = 71
            self.match(PCParser.STRING)
            self.state = 72
            self.match(PCParser.IDENTIFIER)
            self.state = 73
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROPS(self):
            return self.getToken(PCParser.PROPS, 0)

        def object_(self):
            return self.getTypedRuleContext(PCParser.ObjectContext,0)


        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PCParser.RULE_props

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProps" ):
                return visitor.visitProps(self)
            else:
                return visitor.visitChildren(self)




    def props(self):

        localctx = PCParser.PropsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_props)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PCParser.PROPS)
            self.state = 76
            self.object_()
            self.state = 77
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentLayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARENT(self):
            return self.getToken(PCParser.PARENT, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(PCParser.IDENTIFIER, 0)

        def NULL(self):
            return self.getToken(PCParser.NULL, 0)

        def getRuleIndex(self):
            return PCParser.RULE_parentLayer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentLayer" ):
                return visitor.visitParentLayer(self)
            else:
                return visitor.visitChildren(self)




    def parentLayer(self):

        localctx = PCParser.ParentLayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parentLayer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PCParser.PARENT)
            self.state = 80
            _la = self._input.LA(1)
            if not(_la==10 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 81
            self.match(PCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChildLayersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHILDREN(self):
            return self.getToken(PCParser.CHILDREN, 0)

        def OPEN_BRACKET(self):
            return self.getToken(PCParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(PCParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(PCParser.SEMICOLON, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.IDENTIFIER)
            else:
                return self.getToken(PCParser.IDENTIFIER, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.STRING)
            else:
                return self.getToken(PCParser.STRING, i)

        def propReference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCParser.PropReferenceContext)
            else:
                return self.getTypedRuleContext(PCParser.PropReferenceContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.COMMA)
            else:
                return self.getToken(PCParser.COMMA, i)

        def getRuleIndex(self):
            return PCParser.RULE_childLayers

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChildLayers" ):
                return visitor.visitChildLayers(self)
            else:
                return visitor.visitChildren(self)




    def childLayers(self):

        localctx = PCParser.ChildLayersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_childLayers)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(PCParser.CHILDREN)
                self.state = 84
                self.match(PCParser.OPEN_BRACKET)
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15]:
                    self.state = 85
                    self.match(PCParser.IDENTIFIER)
                    pass
                elif token in [12]:
                    self.state = 86
                    self.match(PCParser.STRING)
                    pass
                elif token in [9]:
                    self.state = 87
                    self.propReference()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 90
                        self.match(PCParser.COMMA)
                        self.state = 94
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [15]:
                            self.state = 91
                            self.match(PCParser.IDENTIFIER)
                            pass
                        elif token in [12]:
                            self.state = 92
                            self.match(PCParser.STRING)
                            pass
                        elif token in [9]:
                            self.state = 93
                            self.propReference()
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 100
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 101
                    self.match(PCParser.COMMA)


                self.state = 104
                self.match(PCParser.CLOSE_BRACKET)
                self.state = 105
                self.match(PCParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(PCParser.CHILDREN)
                self.state = 107
                self.match(PCParser.OPEN_BRACKET)
                self.state = 108
                self.match(PCParser.CLOSE_BRACKET)
                self.state = 109
                self.match(PCParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACE(self):
            return self.getToken(PCParser.OPEN_BRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCParser.PairContext)
            else:
                return self.getTypedRuleContext(PCParser.PairContext,i)


        def CLOSE_BRACE(self):
            return self.getToken(PCParser.CLOSE_BRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.COMMA)
            else:
                return self.getToken(PCParser.COMMA, i)

        def getRuleIndex(self):
            return PCParser.RULE_object

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject" ):
                return visitor.visitObject(self)
            else:
                return visitor.visitChildren(self)




    def object_(self):

        localctx = PCParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_object)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(PCParser.OPEN_BRACE)
                self.state = 113
                self.pair()
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 114
                        self.match(PCParser.COMMA)
                        self.state = 115
                        self.pair() 
                    self.state = 120
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 121
                    self.match(PCParser.COMMA)


                self.state = 124
                self.match(PCParser.CLOSE_BRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(PCParser.OPEN_BRACE)
                self.state = 127
                self.match(PCParser.CLOSE_BRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(PCParser.OPEN_BRACKET, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCParser.ValueContext)
            else:
                return self.getTypedRuleContext(PCParser.ValueContext,i)


        def CLOSE_BRACKET(self):
            return self.getToken(PCParser.CLOSE_BRACKET, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PCParser.COMMA)
            else:
                return self.getToken(PCParser.COMMA, i)

        def getRuleIndex(self):
            return PCParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = PCParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(PCParser.OPEN_BRACKET)
                self.state = 131
                self.value()
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 132
                        self.match(PCParser.COMMA)
                        self.state = 133
                        self.value() 
                    self.state = 138
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 139
                    self.match(PCParser.COMMA)


                self.state = 142
                self.match(PCParser.CLOSE_BRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(PCParser.OPEN_BRACKET)
                self.state = 145
                self.match(PCParser.CLOSE_BRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PCParser.STRING, 0)

        def EQUALS(self):
            return self.getToken(PCParser.EQUALS, 0)

        def value(self):
            return self.getTypedRuleContext(PCParser.ValueContext,0)


        def getRuleIndex(self):
            return PCParser.RULE_pair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = PCParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(PCParser.STRING)
            self.state = 149
            self.match(PCParser.EQUALS)
            self.state = 150
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULL(self):
            return self.getToken(PCParser.NULL, 0)

        def BOOLEAN(self):
            return self.getToken(PCParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(PCParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(PCParser.NUMBER, 0)

        def object_(self):
            return self.getTypedRuleContext(PCParser.ObjectContext,0)


        def array(self):
            return self.getTypedRuleContext(PCParser.ArrayContext,0)


        def propReference(self):
            return self.getTypedRuleContext(PCParser.PropReferenceContext,0)


        def getRuleIndex(self):
            return PCParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = PCParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_value)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(PCParser.NULL)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(PCParser.BOOLEAN)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(PCParser.STRING)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 155
                self.match(PCParser.NUMBER)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 156
                self.object_()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.array()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 158
                self.propReference()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROP(self):
            return self.getToken(PCParser.PROP, 0)

        def IDENTIFIER(self):
            return self.getToken(PCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PCParser.RULE_propReference

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropReference" ):
                return visitor.visitPropReference(self)
            else:
                return visitor.visitChildren(self)




    def propReference(self):

        localctx = PCParser.PropReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_propReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(PCParser.PROP)
            self.state = 162
            self.match(PCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





